@@ -31,7 +31,6 @@ import org.junit.jupiter.api.parallel.ExecutionMode;
 import java.lang.reflect.AnnotatedElement;
 import java.net.URL;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import static io.specto.hoverfly.junit.core.HoverflyConstants.DEFAULT_HOVERFLY_EXPORT_PATH;
 import static io.specto.hoverfly.junit.core.HoverflyConstants.DEFAULT_HOVERFLY_RESOURCE_DIR;
@@ -92,7 +91,7 @@ public class TrinoHoverflyExtension
                 URL url = context.getRequiredTestClass().getClassLoader().getResource(name);
                 source = (url != null) ? SimulationSource.url(url) : SimulationSource.empty();
             }
-            case CAPTURE -> capturePath = Paths.get(DEFAULT_HOVERFLY_EXPORT_PATH).resolve(testName);
+            case CAPTURE -> capturePath = Path.of(DEFAULT_HOVERFLY_EXPORT_PATH).resolve(testName);
             default -> throw new AssertionError("Unexpected value: " + mode);
         }
 
